* 2013-04-30 - thorben.betten@open-xchange.com

 - Fix for bug 26244: Fixed XSS injection using utf-16 content type

* 2013-04-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 25783: Correctly unfold content lines in iCal files   

* 2013-04-29 - thorben.betten@open-xchange.com

 - Fix for bug 26243: Fixed vulnerability of XSS injection by content-type header

* 2013-04-17 - thorben.betten@open-xchange.com

 - Fix for bug 25957: Deny "vbscript" URLs
 - Fix for bug 26237: Fixed possible XSS vulnerability

* 2013-03-04 - marcus.klein@open-xchange.com

 - Fix for bug 25168: Fix for bug 25168: Do not encode uiWebPath parameter provided in request. This breaks absolute Location headers

* 2013-02-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 24219: Check supported image format names first, try to reset original input stream as fallback

* 2013-02-18 - thorben.betten@open-xchange.com

 - Fix for bug 25029: Removed 'sessioncache.ccf' from consistency check
 - Fix for bug 21908: Pass text to SMS as-is and deny multipart/alternative
 - Fix for bug 25036: Dropped dependency to com.openexchange.java.Streams

* 2013-02-18 - marcus.klein@open-xchange.com

 - Fix for bug 25011: Fixed extension of CLTs by autocontextid and reseller plugins.

* 2013-02-17 - thorben.betten@open-xchange.com

 - Fix for bug 25010: Simplified handling of upload files to avoid possible infinite loop on "by field name" look-up

* 2013-02-15 - marc.arens@open-xchange.com

 - Fix for bug 23904: Cannot open eMails from OX Appsuite
 - Fix for bug 25006: org.glassfish.grizzly logs to open-xchange log even if log4j is installed

* 2013-02-14 - marc.arens@open-xchange.com

 - Fix for bug 24980: There is no file storage service available that provides account "0"

* 2013-02-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 24829: Removed user discovery by e-mail aliases in contact halo